# portable-document-comparator

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: TESTS.md
tests/src/: left.odt  right.odt
