[package]
name = "portable-document-comparator"
version = "0.1.0"
authors = ["Zoltan Kovari"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/zkoevaari/portable-document-comparator.git"

[dependencies]

[dependencies.clap]
version = "4.5.23"
default-features = false
features = [
    "cargo",
    "derive",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
    "wrap_help",
]
